--- a/expensetracker/package.json
+++ b/expensetracker/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
+    "firebase": "^10.4.0",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18"
