--- a/uber-clone/package.json
+++ b/uber-clone/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.25.6",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.14",
+    "@mui/material": "^5.14.14",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18"
