--- a/uber-clone/package.json
+++ b/uber-clone/package.json
@@ -16,7 +16,8 @@
     "@mui/material": "^5.14.14",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.11.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
