--- a/uber-clone/package.json
+++ b/uber-clone/package.json
@@ -17,6 +17,7 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-google-places-autocomplete": "^4.0.1",
     "react-icons": "^4.11.0"
   },
   "devDependencies": {
